Logo of TON and blue colors styles on page

--- a/src/assets/scss/config/modern/_custom-variables.scss
+++ b/src/assets/scss/config/modern/_custom-variables.scss
@@ -109,4 +109,5 @@ $auth-bg-pattern-img:               url("../../../images/bg-pattern-light.svg");
 $apex-grid-color:                 #f9f9fd;
 
 // Hero
-$hero-bg: linear-gradient(to bottom,#6379c3,#546ee5);
+// $hero-bg: linear-gradient(to bottom,#6379c3,#546ee5);
+$hero-bg: linear-gradient(to bottom,#2AABEE,#229ED9);
