Widget display fix

--- a/src/assets/scss/custom/components/_widgets.scss
+++ b/src/assets/scss/custom/components/_widgets.scss
@@ -27,11 +27,11 @@
     position: relative;
     overflow: hidden;
 
-    @media (min-width: 1200px) and (max-width: 1500px){
-        i.widget-icon { 
-            display: none;
-        }
-    }
+    // @media (min-width: 1200px) and (max-width: 1500px){
+    //     i.widget-icon { 
+    //         display: none;
+    //     }
+    // }
 }
 
 .widget-icon {
