--- a/src/assets/scss/app-modern.scss
+++ b/src/assets/scss/app-modern.scss
@@ -71,6 +71,7 @@ File: Main Css File
 @import "custom/pages/email";
 @import "custom/pages/timeline";
 @import "custom/pages/mining";
+@import "custom/pages/twofa";
 
 // Vendors
 @import "vendor/daterangepicker";
